--- a/qtcDemo/pom.xml
+++ b/qtcDemo/pom.xml
@@ -98,6 +98,11 @@
 				<artifactId>appengine-maven-plugin</artifactId>
 				<version>1.9.65</version>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>1.0.0</version>
+			</plugin>
 		</plugins>
 	</build>
 
